--- a/article/phineas-and-ferb/index.html
+++ b/article/phineas-and-ferb/index.html
@@ -69,7 +69,7 @@
   
     
 
-      <a href="/" title=Home rel="home page">
+      <a href="https://abhineshdhiman-srijan.github.io/tomestatic/" title=Home rel="home page">
   <img  src=/tomestatic/themes/contrib/ezcontent_theme/logo.svg  class="logo"  alt=Home  />
 </a>
   </section>
