--- a/node/index.html
+++ b/node/index.html
@@ -37,7 +37,7 @@
   
     
 
-      <a href="/" title=Home rel="home page">
+      <a href="https://abhineshdhiman-srijan.github.io/tomestatic/" title=Home rel="home page">
   <img  src=/tomestatic/themes/contrib/ezcontent_theme/logo.svg  class="logo"  alt=Home  />
 </a>
   </section>
