--- a/article/create-and-publish-great-content-easily/index.html
+++ b/article/create-and-publish-great-content-easily/index.html
@@ -21,7 +21,7 @@
                 "height": "100"
             },
             "datePublished": "Thu, 03/16/2023 - 05:48",
-            "dateModified": "Thu, 03/16/2023 - 05:51",
+            "dateModified": "Mon, 03/20/2023 - 11:12",
             "isAccessibleForFree": "True",
             "author": {
                 "@type": "Person",
@@ -97,7 +97,7 @@ Home
   </li>
   <li class="nav-item">
     
-<a href="/article/ezcontent-intelligent-drupal-distro-publishers-marketers"  class="nav-link"   key=1    >
+<a href="/article/ezcontent-intelligent-drupal-distro-publishers-marketers-new"  class="nav-link"   key=1    >
 An intelligent Drupal Distro for Publishers &amp; Marketers
 </a>
   </li>
@@ -214,7 +214,9 @@ EzContent Utilize
 							<div class="field__item">  <div class="paragraph paragraph--type--text paragraph--view-mode--default">
           
 						<div class="field field--name-field-body field--type-text-with-summary field--label-hidden field__item"><p>Content creation and publishing don’t need to be chaotic. Build a rich content model with WYSIWYG, preview, layout builder, paragraphs, drag, and drop the content wherever you like it.<br />
-Create content with utmost ease! </p></div>
+Create content with utmost ease! </p>
+
+<p><strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p></div>
 			
       </div>
 </div>
