--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,4 +9,4 @@
     <body>
         Redirecting to <a href="https://adorable-biscuit-1c9bf2.netlify.app/">https://adorable-biscuit-1c9bf2.netlify.app/</a>.
     </body>
-</html>git 
+</html>
