--- a/article/powerful-landing-page-builder/index.html
+++ b/article/powerful-landing-page-builder/index.html
@@ -21,7 +21,7 @@
                 "height": "100"
             },
             "datePublished": "Thu, 03/16/2023 - 05:49",
-            "dateModified": "Thu, 03/16/2023 - 05:52",
+            "dateModified": "Mon, 03/20/2023 - 11:22",
             "isAccessibleForFree": "True",
             "author": {
                 "@type": "Person",
@@ -97,7 +97,7 @@ Home
   </li>
   <li class="nav-item">
     
-<a href="/article/ezcontent-intelligent-drupal-distro-publishers-marketers"  class="nav-link"   key=1    >
+<a href="/article/ezcontent-intelligent-drupal-distro-publishers-marketers-new"  class="nav-link"   key=1    >
 An intelligent Drupal Distro for Publishers &amp; Marketers
 </a>
   </li>
@@ -213,7 +213,11 @@ EzContent Utilize
 			<div class="field field--name-field-content field--type-entity-reference-revisions field--label-hidden field__items">
 							<div class="field__item">  <div class="paragraph paragraph--type--text paragraph--view-mode--default">
           
-						<div class="field field--name-field-body field--type-text-with-summary field--label-hidden field__item"><p>Lets editors create visual layouts for displaying content without dependency on the developer. With Drupal’s layout builder functionality, editors can drag and drop site-wide blocks and content fields. Manage blocks using reusable components and add regions on the fly.</p></div>
+						<div class="field field--name-field-body field--type-text-with-summary field--label-hidden field__item"><p>Lets editors create visual layouts for displaying content without dependency on the developer. With Drupal’s layout builder functionality, editors can drag and drop site-wide blocks and content fields. Manage blocks using reusable components and add regions on the fly.</p>
+
+<p> </p>
+
+<p><strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p></div>
 			
       </div>
 </div>
